--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
    <meta charset="utf-8">
    <meta content="Common,Latin" name="scripts">
    <meta content="initial-scale=1.0" name="viewport">
-   <title>Gustavo Delgado Resume</title>
+   <title>Curriculum - Gustavo Delgado</title>
    <meta content='
        
-   This document is the RFC-style resume of Gustavo Delgado, a brazilian java back-end developer living abroad.
+   This document is the RFC-style curriculum of Gustavo Delgado, a brazilian java back-end developer living abroad.
  
     ' name="description">
    <meta content="Gustavo Delgado" name="keyword">
