adjusted index icon padding

--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -891,6 +891,7 @@
       a.toplink {
          float: right;
          margin-right: 0.5em;
+         padding-top: 3px;
       }
 
       /* Fix the dl styling to match the RFC 7992 attributes */
