amplified go to top icon surface

--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -892,6 +892,7 @@
          float: right;
          margin-right: 0.5em;
          padding-top: 3px;
+         padding-left: 6px;
       }
 
       /* Fix the dl styling to match the RFC 7992 attributes */
