improved about section

--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -1382,12 +1382,14 @@ and increase the contrast between border and odd row background sligthtly */
    <section id="section-about">
       <h2 id="about"><a href="#about" class="selfRef">Sobre</a></h2>
       <p id="section-about-1">
-         Experiência e uso constante das seguintes ferramentas e frameworks:
-         Spring Framework, J2EE, Struts2, React, Jenkins, SonarQube, API Rest,
-         Banco de Dados Oracle, Confluence, Jira, Git e Mercurial (hg).
+         Essa página é um documento baseado no estilo RFC apresentando o currículo 
+         de Gustavo Delgado, um desenvolvedor Java baseado na Austrália.
          <a href="#section-about-1" class="pilcrow">¶</a>
       </p>
       <p id="section-about-2">
+         Experiência e uso constante das seguintes ferramentas e frameworks:
+         Spring Framework, J2EE, Struts2, React, Jenkins, SonarQube, API Rest,
+         Banco de Dados Oracle, Confluence, Jira, Git e Mercurial (hg).
          Graduado em análise e desenvolvimento de sistemas pelo Instituto Federal de São Paulo.
          Inglês fluente. Experiência no setor financeiro no desenvolvimento de ferramentas
          de pagamento digital e também no setor bancário.
