--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -1476,11 +1476,11 @@ and increase the contrast between border and odd row background sligthtly */
                   relacionados a esse tema;<a href="#section-1.1-2" class="pilcrow">¶</a>
                </p>
                <p id="section-1.1-4">
-                  ・realizou mentoria a dois novos membros da equipe, aumentando a produtividade em 20% em 12 meses;<a
+                  ・realizou mentoria a dois membros da equipe, aumentando a produtividade em 20% em 12 meses;<a
                      href="#section-1.1-3" class="pilcrow">¶</a>
                </p>
                <p id="section-1.1-5">
-                  ・ministrou treinamentos aos novos membros da equipe;<a href="#section-1.1-4" class="pilcrow">¶</a>
+                  ・ministrou treinamentos aos novos membros;<a href="#section-1.1-4" class="pilcrow">¶</a>
                </p>
             </section>
          </div>
@@ -1490,9 +1490,12 @@ and increase the contrast between border and odd row background sligthtly */
                   <a href="#section-1.2" class="section-number selfRef">1.2. </a><a href="#name-experience_se"
                      class="section-name selfRef">Trainee @ Software Express - Maio/2019~Set/2019</a>
                </h3>
-               <p id="section-1.2-1">
-                  A brief job descrption.
-                  <a href="#section-1.2-1" class="pilcrow">¶</a>
+               <p id="section-1.1-1">
+                  Tech stack: Java, Spring, Jboss, Linux, Jenkins, Oracle SQL, ReactJS <a href="#section-1.2-1" class="pilcrow">¶</a>
+               </p>
+               <p id="section-1.1-1">
+                  ・forneceu suporte ao ambiente de produção, corrigindo bugs e implementando melhorias;<a href="#section-1.2-2"
+                     class="pilcrow">¶</a>
                </p>
             </section>
          </div>
