adjusted project section id

--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -1527,7 +1527,7 @@ and increase the contrast between border and odd row background sligthtly */
    </div>
    <div id="education">
       <section id="section-2">
-         <h2 id="name-education">
+         <h2 id="name-project">
             <a href="#section-2" class="section-number selfRef">2. </a><a href="#name-project"
                class="section-name selfRef">Projetos</a>
             </h2>
