--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -1382,7 +1382,7 @@ and increase the contrast between border and odd row background sligthtly */
    <section id="section-about">
       <h2 id="about"><a href="#about" class="selfRef">Sobre</a></h2>
       <p id="section-about-1">
-         Essa página é um documento baseado no estilo RFC apresentando o currículo 
+         Essa página é um documento baseado no estilo RFC apresentando o currículo
          de Gustavo Delgado, um desenvolvedor Java baseado na Austrália com experiência
          no setor financeiro no desenvolvimento de ferramentas de pagamento digital e também no setor bancário.
          <a href="#section-about-1" class="pilcrow">¶</a>
@@ -1412,15 +1412,15 @@ and increase the contrast between border and odd row background sligthtly */
                      class="section-name selfRef">Engenheiro de Software @ Fiserv - Set/2019~Atual</a>
                </h3>
                <p id="section-1.1-1">
-                  Tech stack: Java, Spring, Jboss, Linux, Jenkins, Oracle SQL, ReactJS <a
-                     href="#section-1.1-1" class="pilcrow">¶</a>
+                  Tech stack: Java, Spring, Jboss, Linux, Jenkins, Oracle SQL, ReactJS <a href="#section-1.1-1" class="pilcrow">¶</a>
                </p>
                <p id="section-1.1-2">
                   ・desenhou e implementou solução que reduziu a necessidade de requisições recursos da API em 50%;<a href="#section-1.1-2"
                      class="pilcrow">¶</a>
                </p>
                <p id="section-1.1-3">
-                  ・desenhou solução que resolveu problemas relacionados ao processo de retentativas de transação, zerando os
+                  ・desenhou solução que resolveu problemas relacionados ao processo de retentativas de transação,
+                  zerando os
                   tíquetes
                   relacionados a esse tema;<a href="#section-1.1-3" class="pilcrow">¶</a>
                </p>
@@ -1457,10 +1457,10 @@ and increase the contrast between border and odd row background sligthtly */
                <p id="section-1.3-1">
                   Tech stack: Lua, SQL Server
                   <a href="#section-1.3-1" class="pilcrow">¶</a>
-                  </p>
-                  <p id="section-1.3-2">
-                     ・criou scripts em Lua utilizados em serviços de Unidade de Resposta Audível (URA)
-                     <a href="#section-1.3-2" class="pilcrow">¶</a>
+               </p>
+               <p id="section-1.3-2">
+                  ・criou scripts em Lua utilizados em serviços de Unidade de Resposta Audível (URA)
+                  <a href="#section-1.3-2" class="pilcrow">¶</a>
                </p>
             </section>
          </div>
@@ -1471,31 +1471,32 @@ and increase the contrast between border and odd row background sligthtly */
          <h2 id="name-project">
             <a href="#section-2" class="section-number selfRef">2. </a><a href="#name-project"
                class="section-name selfRef">Projetos</a>
-            </h2>
-            <div>
-               <section id="section-2.1">
-                  <h3 id="name-project_micro">
-                     <a href="#section-2.1" class="section-number selfRef">2.1. </a><a href="#name-project_micro"
-                        class="section-name selfRef">Aplicação de serviço de Entrega</a>
-                  </h3>
-                  <p id="section-2.1-1">
-                     Tech stack: Java 17, Spring Cloud, MySQL, RabbitMQ, Cucumber
-                     <a href="#section-2.1-1" class="pilcrow">¶</a>
+         </h2>
+         <div>
+            <section id="section-2.1">
+               <h3 id="name-project_micro">
+                  <a href="#section-2.1" class="section-number selfRef">2.1. </a><a href="#name-project_micro"
+                     class="section-name selfRef">Aplicação de serviço de Entrega</a>
+               </h3>
+               <p id="section-2.1-1">
+                  Tech stack: Java 17, Spring Cloud, MySQL, RabbitMQ, Cucumber
+                  <a href="#section-2.1-1" class="pilcrow">¶</a>
+               </p>
+               <p id="section-2.1-2">
+                  </pid>Uma aplicação simplificada de serviço de entregas, com a intenção de aplicar os conhecimentos
+                  adquiridos em arquitetura de microsserviços. Nesta aplicação foram implementadas boas práticas como
+                  Circuit Breaker, comunicação assíncrona e baseada em eventos, testes unitários, integrados e de ponta
+                  a ponta.
+                  <a href="#section-2.1-2" class="pilcrow">¶</a>
                   </p>
-                  <p id="section-2.1-2">
-                     </pid>Uma aplicação simplificada de serviço de entregas, com a intenção de aplicar os conhecimentos
-                     adquiridos em arquitetura de microsserviços. Nesta aplicação foram implementadas boas práticas como
-                     Circuit Breaker, comunicação assíncrona e baseada em eventos, testes unitários, integrados e de ponta a ponta.
-                     <a href="#section-2.1-2" class="pilcrow">¶</a>
-                  </p>
-               </section>
-            </div>
-            </section>
-            </div>
-            <div id="education">
-               <section id="section-3">
-                  <h2 id="name-education">
-                     <a href="#section-3" class="section-number selfRef">3. </a><a href="#name-education"
+                  </section>
+                  </div>
+                  </section>
+                  </div>
+                  <div id="education">
+                     <section id="section-3">
+                        <h2 id="name-education">
+                           <a href="#section-3" class="section-number selfRef">3. </a><a href="#name-education"
                class="section-name selfRef">Educação</a>
          </h2>
          <div id="education_sda">
@@ -1504,8 +1505,10 @@ and increase the contrast between border and odd row background sligthtly */
                   <a href="#section-3.1" class="section-number selfRef">3.1. </a><a href="#name-education_sad"
                      class="section-name selfRef">Análise e Desenvolvimento de Sistemas @ IFSP - 2017~2019</a>
                </h3>
-               <p>Graduação realizada no Instituto Federal de São Paulo. Como trabalho de conclusão de curso foi desenvolvida uma
-                  aplicação de gerenciamento de filas de restaurante, implementada posteriormente em ambiente produtivo real.
+               <p>Graduação realizada no Instituto Federal de São Paulo. Como trabalho de conclusão de curso foi
+                  desenvolvida uma
+                  aplicação de gerenciamento de filas de restaurante, implementada posteriormente em ambiente produtivo
+                  real.
                   <a href="#section-3.1-1" class="pilcrow">¶</a>
                </p>
             </section>
@@ -1517,17 +1520,17 @@ and increase the contrast between border and odd row background sligthtly */
       <h2 id="name-extracurricular">
          <a href="#section-4" class="section-number selfRef">4. </a><a href="#name-extracurricular"
             class="section-name selfRef">Extracurricular</a>
-         </h2>
-         <div id="extracurricular_x">
-            <section id="section-4.1">
-               <h3 id="name-extracurricular_x">
-                  <a href="#section-4.1" class="section-number selfRef">4.1. </a><a href="#name-extracurricular_x"
-                     class="section-name selfRef">Atividade extracurricular X @ IFSP - 2017~2019</a>
-               </h3>
-               <p>
-                  A brief extracurricular description.<a href="#section-4.1-1" class="pilcrow">¶</a></p>
-            </section>
-         </div>
+      </h2>
+      <div id="extracurricular_x">
+         <section id="section-4.1">
+            <h3 id="name-extracurricular_x">
+               <a href="#section-4.1" class="section-number selfRef">4.1. </a><a href="#name-extracurricular_x"
+                  class="section-name selfRef">Atividade extracurricular X @ IFSP - 2017~2019</a>
+            </h3>
+            <p>
+               A brief extracurricular description.<a href="#section-4.1-1" class="pilcrow">¶</a></p>
+         </section>
+      </div>
       </section>
    </div>
    </section>
