--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -1382,21 +1382,10 @@ and increase the contrast between border and odd row background sligthtly */
    <section id="section-about">
       <h2 id="about"><a href="#about" class="selfRef">Sobre</a></h2>
       <p id="section-about-1">
-         Essa página é um documento baseado no estilo RFC apresentando o currículo
-         de Gustavo Delgado, um desenvolvedor Java baseado na Austrália com experiência
-         no setor financeiro no desenvolvimento de ferramentas de pagamento digital e também no setor bancário.
+         Desenvolvedor Java baseado na Austrália com experiência
+         no setor financeiro no desenvolvimento de ferramentas de pagamento digital e também no setor bancário. Inglês fluente.
          <a href="#section-about-1" class="pilcrow">¶</a>
       </p>
-      <p id="section-about-2">
-         Experiência e uso constante das seguintes ferramentas e frameworks:
-         Spring Framework, J2EE, Struts2, React, Jenkins, SonarQube, API Rest,
-         Banco de Dados Oracle, Confluence, Jira, Git e Mercurial (hg).
-         Graduado em análise e desenvolvimento de sistemas pelo Instituto Federal de São Paulo.
-         Inglês fluente. Experiência no setor financeiro no desenvolvimento de ferramentas
-         de pagamento digital e também no setor bancário.
-         <a href="#section-about-2" class="pilcrow">¶</a>
-      </p>
-
    </section>
 
    <div id="experience">
@@ -1415,21 +1404,26 @@ and increase the contrast between border and odd row background sligthtly */
                   Tech stack: Java, Spring, Jboss, Linux, Jenkins, Oracle SQL, ReactJS <a href="#section-1.1-1" class="pilcrow">¶</a>
                </p>
                <p id="section-1.1-2">
-                  ・desenhou e implementou solução que reduziu a necessidade de requisições recursos da API em 50%;<a href="#section-1.1-2"
+                  ・desenhou e implementou APIs REST em Java e realizou desenvolvimento front-end utilizando Struts e React;<a
+                     href="#section-1.1-2"
                      class="pilcrow">¶</a>
                </p>
                <p id="section-1.1-3">
+                  ・arquitetou e desenvolveu solução que reduziu a necessidade de requisições a alguns recursos da API em 50%;<a
+                     href="#section-1.1-3" class="pilcrow">¶</a>
+                  </p>
+                  <p id="section-1.1-4">
                   ・desenhou solução que resolveu problemas relacionados ao processo de retentativas de transação,
                   zerando os
                   tíquetes
-                  relacionados a esse tema;<a href="#section-1.1-3" class="pilcrow">¶</a>
-               </p>
-               <p id="section-1.1-4">
-                  ・realizou mentoria a dois membros da equipe, aumentando a produtividade em 20% em 12 meses;<a
-                     href="#section-1.1-4" class="pilcrow">¶</a>
+                  relacionados a esse tema;<a href="#section-1.1-4" class="pilcrow">¶</a>
                </p>
                <p id="section-1.1-5">
-                  ・ministrou treinamentos aos novos membros;<a href="#section-1.1-5" class="pilcrow">¶</a>
+                  ・realizou mentoria a dois membros da equipe, aumentando a produtividade em 20% em 12 meses;<a
+                     href="#section-1.1-5" class="pilcrow">¶</a>
+               </p>
+               <p id="section-1.1-6">
+                  ・ministrou treinamentos aos novos membros;<a href="#section-1.1-6" class="pilcrow">¶</a>
                </p>
             </section>
          </div>
@@ -1466,69 +1460,102 @@ and increase the contrast between border and odd row background sligthtly */
          </div>
       </section>
    </div>
-   <div id="education">
+   <div id="skills">
       <section id="section-2">
-         <h2 id="name-project">
-            <a href="#section-2" class="section-number selfRef">2. </a><a href="#name-project"
-               class="section-name selfRef">Projetos</a>
+         <h2 id="name-skills">
+            <a href="#section-2" class="section-number selfRef">2. </a><a href="#name-skills"
+               class="section-name selfRef">Tech
+               Skills</a>
          </h2>
          <div>
             <section id="section-2.1">
-               <h3 id="name-project_micro">
-                  <a href="#section-2.1" class="section-number selfRef">2.1. </a><a href="#name-project_micro"
-                     class="section-name selfRef">Aplicação de serviço de Entrega</a>
-               </h3>
                <p id="section-2.1-1">
-                  Tech stack: Java 17, Spring Cloud, MySQL, RabbitMQ, Cucumber
+                  ・Linguagens: Java, JavaScript, Shell Script, HTML, CSS
                   <a href="#section-2.1-1" class="pilcrow">¶</a>
                </p>
                <p id="section-2.1-2">
-                  </pid>Uma aplicação simplificada de serviço de entregas, com a intenção de aplicar os conhecimentos
-                  adquiridos em arquitetura de microsserviços. Nesta aplicação foram implementadas boas práticas como
-                  Circuit Breaker, comunicação assíncrona e baseada em eventos, testes unitários, integrados e de ponta
-                  a ponta.
+                  ・Base de Dados: Oracle SQL, MySQL, SQL Server
                   <a href="#section-2.1-2" class="pilcrow">¶</a>
-                  </p>
-                  </section>
-                  </div>
-                  </section>
-                  </div>
-                  <div id="education">
-                     <section id="section-3">
-                        <h2 id="name-education">
-                           <a href="#section-3" class="section-number selfRef">3. </a><a href="#name-education"
-               class="section-name selfRef">Educação</a>
-         </h2>
-         <div id="education_sda">
-            <section id="section-3.1">
-               <h3 id="name-education_sad">
-                  <a href="#section-3.1" class="section-number selfRef">3.1. </a><a href="#name-education_sad"
-                     class="section-name selfRef">Análise e Desenvolvimento de Sistemas @ IFSP - 2017~2019</a>
-               </h3>
-               <p>Graduação realizada no Instituto Federal de São Paulo. Como trabalho de conclusão de curso foi
-                  desenvolvida uma
-                  aplicação de gerenciamento de filas de restaurante, implementada posteriormente em ambiente produtivo
-                  real.
-                  <a href="#section-3.1-1" class="pilcrow">¶</a>
+               </p>
+               <p id="section-2.1-3">
+                  ・Mensageria: RabbitMQ
+                  <a href="#section-2.1-3" class="pilcrow">¶</a>
+               </p>
+               <p id="section-2.1-4">
+                  ・Ferramentas de Desenvolvimento: Docker, Shell, VS Code, Postman, Git, Hg, Jira, Jenkins, SonarQube
+                  <a href="#section-2.1-4" class="pilcrow">¶</a>
+               </p>
+               <p id="section-2.1-5">
+                  ・Teconologias/Frameworks: Linux, Spring, REST, JSON, Struts, ReactJS
+                  <a href="#section-2.1-5" class="pilcrow">¶</a>
                </p>
             </section>
          </div>
       </section>
    </div>
+         <div id="education">
+            <section id="section-3">
+         <h2 id="name-project">
+            <a href="#section-3" class="section-number selfRef">3. </a><a href="#name-project"
+               class="section-name selfRef">Projetos</a>
+         </h2>
+         <div>
+            <section id="section-3.1">
+               <h3 id="name-project_micro">
+                  <a href="#section-3.1" class="section-number selfRef">3.1. </a><a href="#name-project_micro"
+                     class="section-name selfRef">Aplicação de serviço de Entrega</a>
+               </h3>
+               <p id="section-3.1-1">
+                  Tech stack: Java 17, Spring Cloud, MySQL, RabbitMQ, Cucumber
+                  <a href="#section-3.1-1" class="pilcrow">¶</a>
+               </p>
+               <p id="section-3.1-2">
+                  </pid>Uma aplicação simplificada de serviço de entregas, com a intenção de aplicar os conhecimentos
+                  adquiridos em arquitetura de microsserviços. Nesta aplicação foram implementadas boas práticas como
+                  Circuit Breaker, comunicação assíncrona e baseada em eventos, testes unitários, integrados e de ponta
+                  a ponta.
+                  <a href="#section-3.1-2" class="pilcrow">¶</a>
+                  </p>
+            </section>
+            </div>
+            </section>
+            </div>
+            <div id="education">
+               <section id="section-4">
+                  <h2 id="name-education">
+                     <a href="#section-4" class="section-number selfRef">4. </a><a href="#name-education"
+               class="section-name selfRef">Educação</a>
+         </h2>
+      <div id="education_sda">
+         <section id="section-4.1">
+            <h3 id="name-education_sad">
+               <a href="#section-4.1" class="section-number selfRef">4.1. </a><a href="#name-education_sad"
+                  class="section-name selfRef">Análise e Desenvolvimento de Sistemas @ IFSP - 2017~2019</a>
+               </h3>
+               <p>Graduação realizada no Instituto Federal de São Paulo. Como trabalho de conclusão de curso foi
+                  desenvolvida uma
+                  aplicação de gerenciamento de filas de restaurante, implementada posteriormente em ambiente produtivo
+                  real.
+               <a href="#section-4.1-1" class="pilcrow">¶</a>
+               </p>
+               </section>
+               </div>
+      </section>
+   </div>
    <div id="extracurricular>
-               <section id=" section-4">
+               <section id=" section-5">
       <h2 id="name-extracurricular">
-         <a href="#section-4" class="section-number selfRef">4. </a><a href="#name-extracurricular"
+         <a href="#section-5" class="section-number selfRef">5. </a><a href="#name-extracurricular"
             class="section-name selfRef">Extracurricular</a>
       </h2>
       <div id="extracurricular_x">
-         <section id="section-4.1">
+         <section id="section-5.1">
             <h3 id="name-extracurricular_x">
-               <a href="#section-4.1" class="section-number selfRef">4.1. </a><a href="#name-extracurricular_x"
+               <a href="#section-5.1" class="section-number selfRef">5.1. </a><a href="#name-extracurricular_x"
                   class="section-name selfRef">Atividade extracurricular X @ IFSP - 2017~2019</a>
             </h3>
             <p>
-               A brief extracurricular description.<a href="#section-4.1-1" class="pilcrow">¶</a></p>
+               A brief extracurricular description.<a href="#section-5.1-1" class="pilcrow">¶</a></p>
          </section>
       </div>
       </section>
