--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -169,7 +169,11 @@
                   adquiridos em arquitetura de microsserviços. Nesta aplicação foram implementadas boas práticas como
                   circuit breaker, comunicação assíncrona e baseada em eventos, testes unitários, integrados e de ponta
                   a ponta.
-</p>
+               </p>
+               <p>
+                  <a href="https://github.com/gustavosdelgado/microservices_architecture" target="_blank">Repositório no
+                     Github</a>
+               </p>
             </section>
          </div>
          </section>
@@ -223,7 +227,7 @@
                   ・Spring Boot API Rest: Segurança, Cache e Monitoramento @ alura - mar/20
                </p>
                <p>
-                     ・Java Exceptions @ alura - jul/19
+                  ・Java Exceptions @ alura - jul/19
                </p>
             </section>
          </div>
