--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -40,7 +40,7 @@
    </dl>
    </div>
    <h1 id="dev-name">Gustavo Delgado</h1><br />
-   <h3 id="title">Desenvolvedor Java back-end</h3>
+   <h3 id="title">Software Engineer</h3>
    <section>
       <h2 id="about"><a href="#about" class="selfRef">Sobre</a></h2>
       <p>
