--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
                </p>
                <p>
                   ・designed and implemented REST APIs in Java and performed front-end development using Struts and
-                  React, using unit tests, integrated and end-to-end testing;
+                  ReactJS;
                </p>
                <p>
-                  ・architected and developed a solution that reduced the need for some API resources requests by 50%;
+                  ・architected and developed a solution that reduced the need for some API resources requests by 50% 
+                  as an improvement for a large-scale project;
                </p>
                <p>
                   ・designed a solution that solved problems related to the transaction retries process
