--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -72,11 +72,12 @@
                </p>
                <p>
                   ・desenhou e implementou APIs REST em Java e realizou desenvolvimento front-end utilizando Struts e
-                  React,
+                  ReactJS,
                   utilizando-se de boas práticas de testes de unidade, integrados e de ponta a ponta;
                </p>
                <p>
-                  ・arquitetou e desenvolveu solução que reduziu a necessidade de requisições a recursos da API em 50%;
+                  ・arquitetou e desenvolveu solução que reduziu a necessidade de requisições a recursos da API em 50%
+                  para um projeto de larga escala;
                </p>
                <p>
                   ・desenhou solução que resolveu problemas relacionados ao processo de retentativas de transação
