minor adjustment making it more available to oportunities

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
    <section>
       <h2 id="about"><a href="#about" class="selfRef">About</a></h2>
       <p>
-         Java Developer migrating to Australia with experience in the financial sector in the
+         Java Developer with experience in the financial sector in the
          development of digital payment tools and also in the banking sector. Fluent in english.
 
       </p>
