--- a/pt-br/index.html
+++ b/pt-br/index.html
@@ -48,7 +48,7 @@
    <section>
       <h2 id="about"><a href="#about" class="selfRef">Sobre</a></h2>
       <p>
-         Desenvolvedor Java migrando para a Austrália com experiência
+         Desenvolvedor Java com experiência
          no setor financeiro no desenvolvimento de ferramentas de pagamento digital e também no setor bancário. Inglês
          fluente.
 
