changed description meta content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    <title>Resume - Gustavo Delgado</title>
    <meta content='
        
-   This document is the RFC-style curriculum of Gustavo Delgado, a brazilian java back-end developer living abroad.
+   This document is a resume of Gustavo Delgado, a brazilian java back-end developer willing to live abroad.
  
     ' name="description">
    <meta content="Gustavo Delgado" name="keyword">
